@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /cvsroot/jameica/jameica/src/de/willuhn/jameica/gui/internal/views/Settings.java,v $
- * $Revision: 1.23 $
- * $Date: 2008/07/22 22:30:08 $
+ * $Revision: 1.24 $
+ * $Date: 2008/08/29 13:15:42 $
  * $Author: willuhn $
  * $Locker:  $
  * $State: Exp $
@@ -167,7 +167,7 @@ public class Settings extends AbstractView implements Extendable
   public void unbind() throws ApplicationException
   {
     // Wir merken uns das aktive Tab
-    lastActiveTab = Integer.valueOf(getTabFolder().getSelectionIndex());
+    lastActiveTab = new Integer(getTabFolder().getSelectionIndex());
   }
 
   /**
@@ -183,6 +183,9 @@ public class Settings extends AbstractView implements Extendable
 
 /**********************************************************************
  * $Log: Settings.java,v $
+ * Revision 1.24  2008/08/29 13:15:42  willuhn
+ * @C Java 1.4 Compatibility - wieso zur Hoelle sind die Fehler vorher nie aufgefallen? Ich compiliere immer gegen 1.4? Suspekt
+ *
  * Revision 1.23  2008/07/22 22:30:08  willuhn
  * @C Zum Speichern des letzten aktiven Tabs braucht man gar keine Session sondern nur einen statischen Integer. Keine Ahnung, warum ich das mal so umstaendlich implementiert hatte ;)
  *
